--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
     "@date-io/date-fns": "1.3.13",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.57",
+    "@material-ui/pickers": "^3.3.10",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
-    "@material-ui/pickers": "^3.3.10",
-    "date-fns": "^2.0.0-beta.5",
     "axios": "^0.21.1",
+    "date-fns": "^2.0.0-beta.5",
     "react": "^17.0.1",
     "react-cookie": "^4.0.3",
     "react-dom": "^17.0.1",
